--- a/PUSHandPOP/index.html
+++ b/PUSHandPOP/index.html
@@ -1,1 +1,25 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>🌟 Name Array Manager</title>
+  <link rel="stylesheet" href="style.css"/>
+</head>
+<body>
+  <div class="container">
+    <h1>🌟 Name Array Manager</h1>
+    <div class="card">
+      <button onclick="pushNames()">➕ Push 3 Names</button>
+      <button onclick="popName()">➖ Pop Last Name</button>
+      <div class="output">
+        <h2>🧠 Current Names:</h2>
+        <ul id="nameList"></ul>
+        <p id="removedName">🗑️ Removed Name: <span>None</span></p>
+      </div>
+    </div>
+  </div>
+  <script src="script.js"></script>
+</body>
+</html>
 
